# strats

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yaml
example/: .gitignore  main.py  pyproject.toml
src/strats/: __init__.py
src/strats/api/: router.py  server.py
src/strats/core/: __init__.py  clock.py  data.py  data_with_metrics.py  kernel.py  monitor.py  singleton_dataclass.py  state.py  strategy.py
src/strats/exchange/: stream_client.py
src/strats/model/: __init__.py  prices.py
src/strats/monitor/: __init__.py  clock_monitor.py  cron_monitor.py  monitor.py  stream_monitor.py
src/strats/strategy/: __init__.py  strategy.py
src/strats/util/: log_config.py
tests/core/: test_data.py
tests/e2e/01_minimal/: test_main.py  test_minimal.py
tests/e2e/02_stream_monitor/: stream_monitor.py  test_stream_monitor.py
tests/e2e/03_state_and_stream_monitor/: state_and_stream_monitor.py  test_state_and_stream_monitor.py
tests/e2e/04_strategy_state_stream_monitor/: strategy_state_stream_monitor.py  test_strategy_state_stream_monitor.py
tests/e2e/e01_minimal/: main.py  test_app.py
tests/e2e/e01_minimal_clock/: test_app.py
tests/e2e/e02_cron_monitor/: app.py  test_app.py
tests/e2e/e02_stream_monitor/: app.py  test_app.py
tests/e2e/e02_stream_monitor_negative/: test_app.py
tests/e2e/e03_state_and_stream_monitor/: app.py  test_app.py
tests/e2e/e04_strategy_state_stream_monitor/: app.py  test_app.py
tests/unit/core/: test_data.py
tests/unit/util/: test_lru_set.py
(+4 files in other folders)
