[project]
name = "strats"
version = "0.1.0"
description = "Strats: system trading framework"
readme = "README.md"
authors = [
    { name = "Kazuki Yoshida" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["example"]
